updated links due to could not translate hostname

--- a/tuiapp/docker-compose.yml
+++ b/tuiapp/docker-compose.yml
@@ -18,7 +18,9 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db          
+      - db
+    links:
+      - db:db      
     networks: ['mynetwork']
 networks: {mynetwork: {}}
  
